Corrected (hopefully) all file names

--- a/templates/affirmation/account.html
+++ b/templates/affirmation/account.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'rango/base.html' %}
+{% extends 'affirmation/base.html' %}
 
 {% block content %}
 
@@ -25,7 +25,7 @@
          <td>{{ user_data.gender }}</td>
        </tr>
        <tr>
-         <td>Gender at Birth</td>
+         <td>Assigned Gender at Birth</td>
          <td>{{ user_data.birthGender }}</td>
        </tr>
       </table>
