--- a/templates/affirmation/index.html
+++ b/templates/affirmation/index.html
@@ -6,7 +6,16 @@
 
   <h1>Home</h1>
   <div>
-    Home Page <br/>
+    <br/>
+    <p>A platform to support trans people access medical services,
+        track well being and quantify qualitative data of that well being
+    </p>
+
+    <h2>Privacy Policy</h2>
+    <ul>
+     <li><p>All personal data is the sole property you, the user. All disclosure is anonymous and discretionary.</p></li>
+     <li><p>Submitted data will be used to provide valuable insight and statistics around the transgender community.</p></li>
+    </ul>
   </div>
 
 {% endblock %}
