--- a/templates/affirmation/register.html
+++ b/templates/affirmation/register.html
@@ -17,9 +17,10 @@
 
     {% csrf_token %}
 
-    {{ user_form.as_p }}
-    {{ profile_form.as_p}}
-
+    <table style="width:100%">
+      {{ user_form.as_table }}
+      {{ profile_form.as_table }}
+    </table>
     <input type="submit" name="submit" value="Register" />
   </form>
   {% endif %}
